--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - TicTacToe</title>
+  <title>TicTacToe</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <div class="main">
   <div class="1" onclick="clicked(event); this.onclick=null;"></div>
   <div class="2" onclick="clicked(event); this.onclick=null;"></div>
@@ -23,7 +23,7 @@
 <div class="winner">The winner is:
 </div>
 <button class="restartButton">Restart Game</button>
-<!-- partial -->
+
   <script  src="./script.js"></script>
 
 </body>
