--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>TicTacToe</title>
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2911/2911124.png">
 </head>
 <body>
 
