--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1021/1021315.png">
 </head>
 <body>
-  
+  <p id="intro-text">No distractions. Just play it.</p>
 <div class="main">
   <div class="1" onclick="clicked(event); this.onclick=null;"></div>
   <div class="2" onclick="clicked(event); this.onclick=null;"></div>
