added: viewport meta info

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>TicTacToe</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1021/1021315.png">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <p id="intro-text">No distractions. Just play it.</p>
